--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -2,7 +2,7 @@ name: Update README
 
 on:
   schedule:
-    - cron: '0 * * * *' # Runs once per hour
+    - cron: '0 0 * * *' # Runs once per day
   push:
     branches:
       - main
